# ElunaAzerothcore

./: .gitattributes  .gitmodules  CMakeLists.txt
.github/workflows/: auto-merge.yml  core-build-nopch.yml  core-build-pch.yml  core_modules_build.yml  create-diff.yml  dashboard-ci.yml  docker_build.yml  tools_build.yml  windows_build.yml
src/cmake/: showoptions.cmake
src/cmake/macros/: ConfigureEluna.cmake
src/common/: CMakeLists.txt
src/server/apps/worldserver/: worldserver.conf.dist
src/server/game/: CMakeLists.txt
src/server/game/Achievements/: AchievementMgr.cpp
src/server/game/Battlegrounds/: Battleground.cpp
src/server/game/Chat/ChatCommands/: ChatCommand.cpp
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/GameObject/: GameObject.cpp
src/server/game/Entities/Object/: Object.cpp  Object.h
src/server/game/Entities/Player/: Player.cpp  PlayerStorage.cpp  PlayerUpdates.cpp
src/server/game/Groups/: Group.cpp
src/server/game/Handlers/: ChatHandler.cpp  GroupHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  QuestHandler.cpp  SpellHandler.cpp  TradeHandler.cpp
src/server/game/Maps/: Map.cpp  Map.h
src/server/game/Scripting/ScriptDefines/: AllCreatureScript.cpp  AllGameObjectScript.cpp  AllItemScript.cpp  AllMapScript.cpp  AllSpellScript.cpp  AreaTriggerScript.cpp  AuctionHouseScript.cpp  CreatureScript.cpp  GameEventScript.cpp  GameObjectScript.cpp  GroupScript.cpp  GuildScript.cpp  LootScript.cpp  PlayerScript.cpp  VehicleScript.cpp  WeatherScript.cpp  WorldScript.cpp
src/server/game/Server/: WorldSession.cpp
src/server/game/Spells/: Spell.cpp
src/server/game/Spells/Auras/: SpellAuraEffects.cpp
src/server/game/World/: IWorld.h  World.cpp  World.h
